--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 #baseURL = "http://example.org/"
 baseURL = "https://whiteworld.github.io/chinese-dishes/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Chinese dishes"
 theme = "ananke"
