--- a/config.toml
+++ b/config.toml
@@ -3,3 +3,4 @@ baseURL = "https://whiteworld.github.io/chinese-dishes/"
 languageCode = "en-us"
 title = "Chinese dishes"
 theme = "ananke"
+disqusShortname = "chinese-dishes"
