--- a/config.toml
+++ b/config.toml
@@ -2,13 +2,13 @@ baseURL = "https://whiteworld.github.io/chinese-dishes/"
 languageCode = "en-us"
 title = "Chinese dishes"
 theme = "beautifulhugo"
-#disqusShortname = "chinese-dishes"
+disqusShortname = "chinese-dishes"
 DefaultContentLanguage = "en"
 metaDataFormat = "yaml"
-pygmentsStyle = "trac"
-pygmentsUseClasses = true
-pygmentsCodeFences = true
-pygmentsCodefencesGuessSyntax = true
+#pygmentsStyle = "trac"
+#pygmentsUseClasses = true
+#pygmentsCodeFences = true
+#pygmentsCodefencesGuessSyntax = true
 #pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
 #googleAnalytics = "XXX"
