--- a/config.toml
+++ b/config.toml
@@ -11,7 +11,7 @@ metaDataFormat = "yaml"
 #pygmentsCodefencesGuessSyntax = true
 #pygmentsUseClassic = true
 #pygmentOptions = "linenos=inline"
-#googleAnalytics = "XXX"
+googleAnalytics = "UA-46354580-3"
 
 [Params]
   subtitle = "Build a beautiful and simple website in minutes"
